# Chorderizer

./: .editorconfig  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GUIDE_OF_USE.md  MANIFEST.in  Makefile  README.md  ROADMAP.md  WIKI.md  benchmark_generators.py  chorderizer.py  clean_imports.py  clean_imports2.py  demo.tape  fix_f_strings3.py  fix_flake8.py  fix_flake8_longlines.py  fix_inputs.py  fix_inputs_ui.py  fix_mypy_complete.py  fix_mypy_ignore.py  fix_mypy_strict.py  fix_ui_f_strings.py  fix_ui_f_strings2.py  format_all.py  make_mypy_happy.py  openssf_audit.md  patcher.py  pr_body.md  pr_body.txt  pr_description.md  pr_description.txt  prettierrc  prs.json  pyproject.toml  remove_type_ignore.py  setup.py  (+4 more)
.Jules/: palette.md
.github/: dependabot.yml
.github/workflows/: ci.yml  python-ci.yml  python-package.yml  python-publish.yml  security.yml
.jules/: bolt.md  palette.md  sentinel.md
.specsmd/: manifest.yaml
Docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  GUIDE_OF_USE.md  USER_GUIDE.md
chord_generator_midi_exports/: prog_C_Major.mid  prog_E_Major.mid
chord_generator_midi_exports/midi_exports_modular/: prog_B_Mayor.mid
output_tests/: prog_F_Major.mid
output_tests/chord_generator_midi_exports/midi_exports_modular/: prog_C_Mayor.mid
samples/voice_leading/: ii-V-I_NO_leading.mid  ii-V-I_WITH_leading.mid
scratch/: compare_voice_leading.py  test_output.mid  verify_logic.py
src/chorderizer/: chorderizer.py  config.json  generators.py  icons.py  theory_utils.py  translations.py  tui_app.py  tui_widgets.py  ui.py
src/chorderizer/data/: scales.json
tests/: __init__.py  test_chorderizer.py  test_generators.py  test_security.py  test_theory.py  test_ui.py
