[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chorderizer"
version = "0.2.0"
authors = [
  { name="Julio César Martinez", email="julioglez.93@gmail.com" },
]
description = "Generador avanzado de progresiones de acordes MIDI con Dashboard TUI reactivo y visualizadores."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Artistic Software",
    "Operating System :: OS Independent",
]
dependencies = [
    "mido>=1.3.3",
    "colorama>=0.4.6",
    "prompt_toolkit>=3.0.0",
    "textual>=0.86.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
"Homepage" = "https://github.com/julesklord/Chorderizer"
"Bug Tracker" = "https://github.com/julesklord/Chorderizer/issues"

[project.scripts]
chorderizer = "chorderizer.chorderizer:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["chorderizer*"]

[tool.setuptools.package-data]
chorderizer = ["data/*.json"]
